src/test/resources/entity_test/invalid/Employee5.entity

Employee5 {
  // no field defined in this entity
}
